// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders narrow component if there is no wide one 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`renders wide components 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  I am going to render without any problems...
</View>
`;
